[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkforge-trustlayer-client"
version = "1.9.0"
description = "Python SDK for the ArkForge Trust Layer — cryptographic proof for every AI agent API call"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]
keywords = [
    "AI agents",
    "trust layer",
    "cryptographic proof",
    "audit trail",
    "MCP",
    "EU AI Act",
    "compliance",
    "RFC 3161",
    "sigstore",
    "agent-to-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://arkforge.tech?utm_source=pypi&utm_medium=package&utm_campaign=agent_client"
Documentation = "https://trust.arkforge.tech"
Repository = "https://github.com/ark-forge/arkforge-agent-client"
"Bug Tracker" = "https://github.com/ark-forge/arkforge-agent-client/issues"

[project.optional-dependencies]
stripe = ["stripe>=7.0.0"]

[project.scripts]
arkforge = "arkforge._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arkforge"]
